# IROS20_NMFNet

./: README.md
beetlebot-simulation/: README.md
beetlebot-simulation/src/beetlebot_AIOZ/: README.md
beetlebot-simulation/src/beetlebot_AIOZ/beetlebot_control/: CMakeLists.txt  package.xml
beetlebot-simulation/src/beetlebot_AIOZ/beetlebot_control/config/: beetlebot_control.yaml
beetlebot-simulation/src/beetlebot_AIOZ/beetlebot_control/launch/: beetlebot_control.launch
beetlebot-simulation/src/beetlebot_AIOZ/beetlebot_control/scripts/: auto_control_robot.py  control_6_wheel_4_sterring.py  get_position_velcity.py  keyboard_controller.py  robot.py  set_state_model.py  voice_controller.py
beetlebot-simulation/src/beetlebot_AIOZ/beetlebot_description/: CMakeLists.txt  package.xml
beetlebot-simulation/src/beetlebot_AIOZ/beetlebot_description/meshes/: Bogie_left_Link.dae  Bogie_right_Link.dae  Frame_front_left_Link.dae  Frame_front_right_Link.dae  Frame_rear_left_Link.dae  Frame_rear_right_Link.dae  Pivot_left_Link.dae  Pivot_mid_Link.dae  Pivot_right_Link.dae  Wheel_front_left_Link.dae  Wheel_front_right_Link.dae  Wheel_mid_left_Link.dae  Wheel_mid_right_Link.dae  Wheel_rear_left_Link.dae  Wheel_rear_right_Link.dae  base_link.dae  base_link_old.dae  base_link_ver1.dae
beetlebot-simulation/src/beetlebot_AIOZ/beetlebot_description/urdf/: IMU.txt  beetlebot.gazebo  beetlebot.xacro  camera.txt  lidar.txt  robot.xacro  sensor.xacro
simulation-env/auto_replacing_texture/: GENERATE.py  random_color_texture.py
(+37 files in other folders)
