<?xml version="1.0"?>
<package>
  <name>beetlebot_description</name>
  <version>0.0.0</version>
  <description>The beetlebot_description package</description>

  <maintainer email="pvdoanh.ce@gmail.com">pvd</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>